# OpenCV-getting-started

./: READEME.md
Filestorage/: app  cheese.xml  cheese.yml  filestorage.cpp
GUI/: app  main.cpp
Mat_operations/: app  main.cpp  test.xml  test.yaml
histo/: app  main.cpp
lana/: CMakeLists.txt  lana.cpp  read me
video_clp/: app  main.cpp  read me
